# Util

./: .gitignore  .gitmodule  .gitmodules  CMakeLists.txt  README.md  xmake.lua
include/: AsymmetricEncryption.h  CMakeLists.txt  Defines.h  Encryption.h  EncryptionManager.h  IPlugin.h  LibEntity.h  PluginsManager.h  Queue.hpp  Rpc.h  Serializer.h  Singleton.h  SymmetricEncryption.h  coroutine.h  coroutine_impl.hpp  xnet.h
plugins/: AesEncryption.cpp  CMakeLists.txt
plugins/aes/: AesDefine.h  AesDll.cpp  AesEncryption.cpp  AesEncryption.h  AesPlugin.cpp  AesPlugin.h
src/: AsymmetricEncryption.cpp  CMakeLists.txt  Encryption.cpp  EncryptionManager.cpp  LibEntity.cpp  PluginsManager.cpp  Rpc.cpp  Serializer.cpp  SymmetricEncryption.cpp  xnet.cpp
test/: CMakeLists.txt  cmake_install.cmake  test.cpp  test.vcxproj  test.vcxproj.filters
test/testrpc_client/: main.cpp
test/testrpc_server/: main.cpp
