CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
#携程封装+线程池封装+timer
project(CTT)# LANGUAGES cxx)
add_definitions(-std=c++11)

#ADD_SUBDIRECTORY(src bin)
ADD_SUBDIRECTORY(test)


#set(ARCHIVE_OUTPUT_DIRECTORY "./bin")
#set(binRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
#set(RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

#set_target_properties(Target PROPERTIES
#	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin"
#	binRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin"
#	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

#set_property(TARGET test PROPERTY CXX_STANDARD 11)