INCLUDE_DIRECTORIES(../include/plugin)

file(GLOB SRC_LIST ./*/*.cpp)
file(GLOB SRC_LIST ./*.cpp)
IF (WIN32)
	MESSAGE(STATUS "windows")
	set(LIBS ws2_32)
	IF(DEBUG)
		file(GLOB LIBS ${RUNTIME_OUTPUT_DIRECTORY}/Debug/*.lib)
	ENDIF()
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	MESSAGE(STATUS "UNIX-like OS")
	IF(DEBUG)
	file(GLOB LIBS ${RUNTIME_OUTPUT_DIRECTORY}/Debug/*.so)
	ENDIF()
ENDIF ()

set(CMAKE_CXX_FLAGS "-D_EXPORT")
get_property(HEADERS_LIST GLOBAL PROPERTY "HEADERS_LIST" )

add_library(Util SHARED ${SRC_LIST} ${HEADERS_LIST})


TARGET_LINK_LIBRARIES(Util ${LIBS})

#add_library(CTT STATIC ${SRC_LIST} ${PLATFORM_SRC_LIST})
set_property(TARGET Util PROPERTY CXX_STANDARD 11)
set_target_properties(Util PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${RUNTIME_OUTPUT_DIRECTORY}")
