INCLUDE_DIRECTORIES(../include)

set(SRC_LIST test.cpp)

ADD_EXECUTABLE(test ${SRC_LIST})
set(LIBS CTT)

IF (WIN32)
	MESSAGE(STATUS "windows")
	IF(DEBUG)
		file(GLOB LIBS ${CMAKE_CURRENT_SOURCE_DIR}/Debug/*.lib)
	ENDIF()
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	MESSAGE(STATUS "UNIX-like OS")
	IF(DEBUG)
	file(GLOB LIBS ${CMAKE_CURRENT_SOURCE_DIR}/Debug/*.so)
	ENDIF()
ENDIF ()

MESSAGE(STATUS "lib list " ${LIBS})

#TARGET_LINK_LIBRARIES(test ${LIBS})
set_property(TARGET test PROPERTY CXX_STANDARD 11)
set_target_properties(test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

